# test-technique

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  compose.yaml  pyproject.toml
doc/: wine_quality.excalidraw
infra/: compose.dev.yaml  compose.prd.yaml  container_bashrc
wine_api/: Dockerfile  pyproject.toml
wine_api/wine_api/: _logging.py  _settings.py  api.py  data_models.py
wine_ds/: Dockerfile  pyproject.toml
wine_ds/wine_ds/: _logging.py  _settings.py  fill_db.py  test_api.py  train_model.py
wine_mlflow/: Dockerfile
