[tool.poetry]
name = "wine-api"
version = "0.1.0"
description = ""
authors = ["Tristan Muscat <tristan.muscat@axa.fr>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
mlflow = "^2.22.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
