[tool.poetry]
name = "wine-ds"
version = "0.1.0"
description = ""
authors = ["Tristan Muscat <tristan.muscat@axa.fr>"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
scikit-learn = "^1.6.1"
mlflow = "^2.22.0"
pydantic-settings = "^2.2.1"
setuptools = "^80.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
